--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
 videos/
 firebaseKey/
 apiKey/
 uncompletedVideos/
-__pycache__/
