__init__.pyファイルを作成

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ firebaseKey/
 apiKey/
 uncompletedVideos/
 __pycache__/
-setVideo/__pycache__/
-setVideo/csv/
+manaoke-get-lyric/__pycache__/
+manaoke-get-lyric/csv/
